@@ -16,6 +16,13 @@ enum {
 	HXF_UID  = 1 << 0,
 	HXF_GID  = 1 << 1,
 	HXF_KEEP = 1 << 2,
+	HX_REALPATH_NOFLAGS  = 0,
+	HX_REALPATH_ABSOLUTE = 1 << 0,
+	HX_REALPATH_SELF     = 1 << 1,
+	HX_REALPATH_PARENT   = 1 << 2,
+	HX_REALPATH_SYMLINK  = 1 << 3,
+	HX_REALPATH_DEFAULT  =
+		HX_REALPATH_SELF | HX_REALPATH_PARENT | HX_REALPATH_SYMLINK,
 };
 
 struct HXdir;
@@ -27,6 +34,7 @@ extern int HX_copy_dir(const char *, const char *, unsigned int, ...);
 extern int HX_copy_file(const char *, const char *, unsigned int, ...);
 extern int HX_mkdir(const char *);
 extern int HX_readlink(hxmc_t **, const char *);
+extern int HX_realpath(hxmc_t **, const char *, unsigned int);
 extern int HX_rrmdir(const char *);
 
 extern ssize_t HXio_fullread(int, void *, size_t);
