@@ -12,6 +12,7 @@ Enhancements:
 - defs: add BUILD_BUG_ON_EXPR
 - format: provide a %(substr) function
 - io: add HX_readlink (zero-terminating mc-output readlink)
+- io: add HX_realpath (supports relative-path output)
 
 
 v3.9.1 (2011-01-17)
